tests/baselines/reference/Protected6.errors.txt
tests/cases/conformance/parser/ecmascript5/Protected/Protected6.ts(2,10): error TS1029: 'protected' modifier must precede 'static' modifier.


==== tests/cases/conformance/parser/ecmascript5/Protected/Protected6.ts (1 errors) ====
    class C {
      static protected m() { }
             ~~~~~~~~~
!!! error TS1029: 'protected' modifier must precede 'static' modifier.
    }